--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,8 @@
-doctype html
 html
-
     head
-        base(href='/')
         title Online Recipe Book
-        link(rel='stylesheet', href='styles.css')
-
     body
+        nav
+            a(href='/') Home
+            a(href='/recipes') Recipes
         block content
